paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/struct_and_union_3a/sample_004/target.compile.log
error: usage of an `unsafe` block
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/struct_and_union_3a/sample_004/target.rs:28:5
   |
28 | /     unsafe {
29 | |         u.nf.type_ = 1;
30 | |         u.nf.doublenode = 3.14;
...  |
44 | |     }
   | |_____^
   |
   = note: requested on the command line with `-F unsafe-code`

error[E0740]: field must implement `Copy` or be wrapped in `ManuallyDrop<...>` to be used in a union
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/struct_and_union_3a/sample_004/target.rs:3:5
  |
3 |     n: N,
  |     ^^^^
  |
  = note: union fields must not have drop side-effects, which is currently enforced via either `Copy` or `ManuallyDrop<...>`
help: wrap the field type in `ManuallyDrop<...>`
  |
3 |     n: std::mem::ManuallyDrop<N>,
  |        +++++++++++++++++++++++ +

error[E0381]: partially assigned binding `u` isn't fully initialized
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/expressions/struct_and_union_3a/sample_004/target.rs:29:9
   |
26 |     let mut u: U;
   |         ----- binding declared here but left uninitialized
...
29 |         u.nf.type_ = 1;
   |         ^^^^^^^^^^^^^^ `u.nf` partially assigned here but it isn't fully initialized
   |
   = help: partial initialization isn't supported, fully initialize the binding with a default value and mutate it, or use `std::mem::MaybeUninit`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0381, E0740.
For more information about an error, try `rustc --explain E0381`.